[tool.poetry]
name = "tibberios"
version = "0.1.1"
description = "Do awesome stuff with the Tibber API"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyTibber = "^0.25.2"
Pillow = "9.2.0"
kaleido = "0.2.1"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.7"
black = "^22.8.0"

[tool.poetry.scripts]
tibberios = 'tibberios.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
