[tool.poetry]
name = "tibberios"
version = "0.1.2"
description = "Do awesome stuff with the Tibber API"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyTibber = "^0.25.2"
Pillow = "9.2.0"
kaleido = "0.2.1"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.group.rpi]
optional = true

# from the Waveshare e-Paper library for updating the e-paper display on a raspberry pi
[tool.poetry.group.rpi.dependencies]
"RPi.GPIO" = "^0.7.1"
spidev = "^3.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.7"
jupyter_core = ">=4.11.2"
black = "^22.8.0"

[tool.poetry.scripts]
tibberios = 'tibberios.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
